--- a/disk6directory/RNASEQ/snps/012918processing_snps_notes.Rmd
+++ b/disk6directory/RNASEQ/snps/012918processing_snps_notes.Rmd
@@ -14,7 +14,7 @@ Breeding-Value-Prediction/disk6directory/RNASEQ/rawreads/processingnotes
 
 *Below is a list of all steps. First each step will be practiced and once a final method for each step is determined a pipe command will be built for as many steps as possible.
 
-## 1. Align .fastq.gz techincal reps to 86K transcriptome with bowtie
+## 1. Build index of 86k transcriptome
 
 *Build bowtie2 index:
 
@@ -23,32 +23,41 @@ cd /media/disk6/ARF/RNASEQ
 ./software/bowtie/bowtie2-build -f ./references/Pita.86ktxptome.fasta Pita.86k
 ```
 
-*Practice run bowtie2:
+## 2. Align .fastq.gz techincal reps to 86K transcriptome with bowtie
 
-```linux
-./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane01/96_S12_L001_R1_001.fastq.gz -S out.sam
-```
-*The above outputs a .sam file that is uncompressed
+*The following code aligns techincal rplicates to the 86k transcriptome and then converts to a compresed bam file
 
-*The below puts out a .bam file that is compressed. Note that when using samtools view "q" can be used to filter low quality reads. Should this be used?
+*EW samples were ran first.  A semicolon was used to string together processing of separate lanes.
 
 ```linux
 while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane01/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane01/$file; done < ./rawreads/EWfasta/lane01/lane01.list;while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane02/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane02/$file; done < ./rawreads/EWfasta/lane02/lane02.list;
 
-while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane03/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane03/$file; done < ./rawreads/EWfasta/lane03/lane03.list; while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane04/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane04/$file; done < ./rawreads/EWfasta/lane04/lane04.list; while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane05/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane05/$file; done < ./rawreads/EWfasta/lane05/lane05.list; while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane06/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane06/$file; done < ./rawreads/EWfasta/lane06/lane06.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane07/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane07/$file; done < ./rawreads/EWfasta/lane07/lane07.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane08/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane08/$file; done < ./rawreads/EWfasta/lane08/lane08.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane09/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane09/$file; done < ./rawreads/EWfasta/lane09/lane09.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane10/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane10/$file; done < ./rawreads/EWfasta/lane10/lane10.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane11/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane11/$file; done < ./rawreads/EWfasta/lane11/lane11.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane12/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane12/$file; done < ./rawreads/EWfasta/lane12/lane12.list;while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane01/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane01/$file; done < ./rawreads/LGEPfasta/lane01/lane01.list;while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane02/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane02/$file; done < ./rawreads/LGEPfasta/lane02/lane02.list;while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane03/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane03/$file; done < ./rawreads/LGEPfasta/lane03/lane03.list; while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane04/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane04/$file; done < ./rawreads/LGEPfasta/lane04/lane04.list; while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane05/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane05/$file; done < ./rawreads/LGEPfasta/lane05/lane05.list; while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane06/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane06/$file; done < ./rawreads/LGEPfasta/lane06/lane06.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane07/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane07/$file; done < ./rawreads/LGEPfasta/lane07/lane07.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane08/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane08/$file; done < ./rawreads/LGEPfasta/lane08/lane08.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane09/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane09/$file; done < ./rawreads/LGEPfasta/lane09/lane09.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane10/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane10/$file; done < ./rawreads/LGEPfasta/lane10/lane10.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane11/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane11/$file; done < ./rawreads/LGEPfasta/lane11/lane11.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane12/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane12/$file; done < ./rawreads/LGEPfasta/lane12/lane12.list; 
+while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane03/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane03/$file; done < ./rawreads/EWfasta/lane03/lane03.list; while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane04/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane04/$file; done < ./rawreads/EWfasta/lane04/lane04.list; while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane05/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane05/$file; done < ./rawreads/EWfasta/lane05/lane05.list; while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane06/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane06/$file; done < ./rawreads/EWfasta/lane06/lane06.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane07/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane07/$file; done < ./rawreads/EWfasta/lane07/lane07.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane08/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane08/$file; done < ./rawreads/EWfasta/lane08/lane08.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane09/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane09/$file; done < ./rawreads/EWfasta/lane09/lane09.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane10/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane10/$file; done < ./rawreads/EWfasta/lane10/lane10.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane11/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane11/$file; done < ./rawreads/EWfasta/lane11/lane11.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane12/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane12/$file; done < ./rawreads/EWfasta/lane12/lane12.list
 
+```
 
+*The same process was done for the LGEP lanes:
+
+```linux
+while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane01/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane01/$file; done < ./rawreads/LGEPfasta/lane01/lane01.list;while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane02/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane02/$file; done < ./rawreads/LGEPfasta/lane02/lane02.list;while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane03/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane03/$file; done < ./rawreads/LGEPfasta/lane03/lane03.list; while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane04/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane04/$file; done < ./rawreads/LGEPfasta/lane04/lane04.list; while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane05/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane05/$file; done < ./rawreads/LGEPfasta/lane05/lane05.list; while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane06/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane06/$file; done < ./rawreads/LGEPfasta/lane06/lane06.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane07/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane07/$file; done < ./rawreads/LGEPfasta/lane07/lane07.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane08/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane08/$file; done < ./rawreads/LGEPfasta/lane08/lane08.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane09/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane09/$file; done < ./rawreads/LGEPfasta/lane09/lane09.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane10/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane10/$file; done < ./rawreads/LGEPfasta/lane10/lane10.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane11/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane11/$file; done < ./rawreads/LGEPfasta/lane11/lane11.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane12/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane12/$file; done < ./rawreads/LGEPfasta/lane12/lane12.list; 
 
 while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane13/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane13/$file; done < ./rawreads/LGEPfasta/lane13/lane13.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane14/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane14/$file; done < ./rawreads/LGEPfasta/lane14/lane14.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane15/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane15/$file; done < ./rawreads/LGEPfasta/lane15/lane15.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane16/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane16/$file; done < ./rawreads/LGEPfasta/lane16/lane16.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane17/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane17/$file; done < ./rawreads/LGEPfasta/lane17/lane17.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane18/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane18/$file; done < ./rawreads/LGEPfasta/lane18/lane18.list; 
 
 ```
 
+## 3. Sort the aligned techincal reps and mark/remove duplicates:
+
+*Within each of the EW/lane(xx) directories a directory titled "sort.rmdup" was created to store finished sorted/rmdup bams
 
 ```linux
 cd /media/disk6/ARF/RNASEQ/snps/86k/EW/lane01
 
 mkdir sort.rmdup
+```
 
+*The above was done for every lane in both EW & LGEP SNP directories.  Now we can pipe together the sorting and removing of duplicates for each lane:
+
+```linux
 while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/EW/lane01/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/EW/lane01/sort.rmdup/$file; done < ./rawreads/EWfasta/lane01/lane01.list
 
 while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/EW/lane02/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/EW/lane02/sort.rmdup/$file; done < ./rawreads/EWfasta/lane02/lane02.list; while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/EW/lane03/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/EW/lane03/sort.rmdup/$file; done < ./rawreads/EWfasta/lane03/lane03.list; while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/EW/lane04/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/EW/lane04/sort.rmdup/$file; done < ./rawreads/EWfasta/lane04/lane04.list; while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/EW/lane05/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/EW/lane05/sort.rmdup/$file; done < ./rawreads/EWfasta/lane05/lane05.list; while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/EW/lane06/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/EW/lane06/sort.rmdup/$file; done < ./rawreads/EWfasta/lane06/lane06.list; while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/EW/lane07/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/EW/lane07/sort.rmdup/$file; done < ./rawreads/EWfasta/lane07/lane07.list; while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/EW/lane08/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/EW/lane08/sort.rmdup/$file; done < ./rawreads/EWfasta/lane08/lane08.list; while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/EW/lane09/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/EW/lane09/sort.rmdup/$file; done < ./rawreads/EWfasta/lane09/lane09.list; while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/EW/lane10/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/EW/lane10/sort.rmdup/$file; done < ./rawreads/EWfasta/lane10/lane10.list; while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/EW/lane11/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/EW/lane11/sort.rmdup/$file; done < ./rawreads/EWfasta/lane11/lane11.list; while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/EW/lane12/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/EW/lane12/sort.rmdup/$file; done < ./rawreads/EWfasta/lane12/lane12.list
@@ -67,7 +76,6 @@ while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k
 
 ```
 
-## 2. Convert sam file to bam
 ## 3. Merge technical rep bam files
 ## 4. Sort biological rep bam file
 ## 5. Mark/remove duplicates within bam files
