--- a/disk6directory/RNASEQ/snps/012918processing_snps_notes.Rmd
+++ b/disk6directory/RNASEQ/snps/012918processing_snps_notes.Rmd
@@ -62,6 +62,8 @@ while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k
 
 while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/EW/lane02/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/EW/lane02/sort.rmdup/$file; done < ./rawreads/EWfasta/lane02/lane02.list; while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/EW/lane03/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/EW/lane03/sort.rmdup/$file; done < ./rawreads/EWfasta/lane03/lane03.list; while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/EW/lane04/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/EW/lane04/sort.rmdup/$file; done < ./rawreads/EWfasta/lane04/lane04.list; while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/EW/lane05/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/EW/lane05/sort.rmdup/$file; done < ./rawreads/EWfasta/lane05/lane05.list; while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/EW/lane06/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/EW/lane06/sort.rmdup/$file; done < ./rawreads/EWfasta/lane06/lane06.list; while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/EW/lane07/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/EW/lane07/sort.rmdup/$file; done < ./rawreads/EWfasta/lane07/lane07.list; while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/EW/lane08/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/EW/lane08/sort.rmdup/$file; done < ./rawreads/EWfasta/lane08/lane08.list; while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/EW/lane09/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/EW/lane09/sort.rmdup/$file; done < ./rawreads/EWfasta/lane09/lane09.list; while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/EW/lane10/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/EW/lane10/sort.rmdup/$file; done < ./rawreads/EWfasta/lane10/lane10.list; while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/EW/lane11/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/EW/lane11/sort.rmdup/$file; done < ./rawreads/EWfasta/lane11/lane11.list; while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/EW/lane12/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/EW/lane12/sort.rmdup/$file; done < ./rawreads/EWfasta/lane12/lane12.list
 
+while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/LGEP/lane01/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/LGEP/lane01/sort.rmdup/$file; done < ./rawreads/LGEPfasta/lane01/lane01.list
+
 while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/LGEP/lane13/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/LGEP/lane13/sort.rmdup/$file; done < ./rawreads/LGEPfasta/lane13/lane13.list
 
 while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/LGEP/lane14/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/LGEP/lane14/sort.rmdup/$file; done < ./rawreads/LGEPfasta/lane14/lane14.list
@@ -76,6 +78,9 @@ while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k
 
 ```
 ***Note: Once finished, unsorted and duplicated bam technical reps were deleted.  The newly created bam files within the ./sort.rmdup directory were then moved in place of the deleted unsorted and duplicated bams. Finally the ./sort.rmdup folder was deleted
+
+*Create samtools index for mpileup
+/media/disk6/ARF/RNASEQ/software/samtools-1.6/samtools faidx /media/disk6/ARF/RNASEQ/references/Pita.86ktxptome.fasta
 
 ## 3. Merge technical rep bam files
 ## 4. Sort biological rep bam file
