--- a/disk6directory/RNASEQ/snps/012918processing_snps_notes.Rmd
+++ b/disk6directory/RNASEQ/snps/012918processing_snps_notes.Rmd
@@ -194,5 +194,9 @@ taxib ./lgep.bam.freebayes.out.vcf.gz
  ```
  
 ``` linux
-vcftools --gzvcf ./ew.bam.freebayes.out.vcf.gz --remove-indels --max-missing 1.0 --maf 0.05 --min-meanDP 10  --012 
+vcftools --gzvcf ./192.biorep.vcf.bgzip.gz --remove-indels --max-missing 1.0 --maf 0.05 --min-meanDP 10  --012 
+```
+
+```linux
+vcftools --gzvcf ./192.biorep.vcf.bgzip.gz --remove-indels --max-missing 1.0 --maf 0.05 --min-meanDP 10  --relatedness2 
 ```
