--- a/disk6directory/RNASEQ/trimmedfiltreads/README.Rmd
+++ b/disk6directory/RNASEQ/trimmedfiltreads/README.Rmd
@@ -5,5 +5,6 @@ Directory contains filtered and trimmed reads.
 To clarify the index for each technical replicate the following command was done
 
 ````
-zless ./50_S84_L008_R1_001.fastq.gz | grep '^@D00555' | cut -d : -f 10 | sort | uniq -c | sort -nr  > out.tx
+while read file; do gzip -cd ./50_S84_L008_R1_001.fastq.gz |head -1 | grep '^@D00555' | cut -d : -f 10 | sort | uniq -c | sort -nr  >> out.txt; done < all.fastqs
+
 ````
