--- a/disk6directory/RNASEQ/analyses/README.RMD
+++ b/disk6directory/RNASEQ/analyses/README.RMD
@@ -10,4 +10,8 @@
 
     * The counts may be normalized using the sommer package and account for lane, index, and pedigree if 
     
-      using the 576 techincal replicates, or, index and pedigree if using the 192 biological replicates.
+      using the 576 techincal replicates. Output can be family or biological level log2 sample counts.
+
+## Step 3 - Filtering
+
+     * Counts returned post-normalization are then applied to X different filters. ***
